spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -951,7 +951,7 @@ a {
 }
 
 .turner-bot-card {
-  margin-top: 2.5rem;
+  margin-top: 4rem;
   background: var(--clr-card);
   border-radius: var(--radius);
   padding: 2rem;
